...
const ChangesSection = ({ mr, changeSummaries }) => {

    const { totalAdditions, totalDeletions, newFiles, modifiedFiles, deletedFiles } = changeSummaries

    return (
        <View className="p-3 mb-4 rounded-lg bg-card-600">
            <Text className="mb-2 text-lg font-semibold text-white">Changes</Text>
            <View className="flex-row items-center justify-between">
                <View className="flex-row items-center">
                    <Ionicons name="document-text-outline" size={16} color="white" />
                    <Text className="ml-2 text-white">
                        {mr.changes_count || "No"} files changed
                    </Text>
...
        }
    ];

    const headerOptions: HeaderOption[] = [
        {
            icon: "pencil",
            label: "Edit Merge Request",
            onPress: () => router.push(`/workspace/projects/${projectId}/merge-requests/${mr_iid}/edit`),
            testID: "mr-edit-option"
        },
        {
            icon: mr?.state === 'opened' ? 'close-circle-outline' : 'checkmark-circle-outline',
            color: mr?.state === 'opened' ? 'red' : 'green',
            label: mr?.state === 'opened' ? 'Close Merge Request' : 'Reopen Merge Request',
            onPress: mr?.state === 'opened' ? closeMr : openMr,
            testID: "toggle-mr-state-option"
        },
        {
            icon: "trash-outline",
            color: "red",
            label: "Delete Merge Request",
            onPress: deleteMr,
            testID: "mr-delete-option"
        }
    ];

    return (
...
                            mr={mr}
                            onMerge={() => { console.log("ok") }}
                            onClose={closeMr}
                            onReopen={openMr}
                        />
                    }
                    <Text className="text-4xl font-bold text-white">Events</Text>
                    {isLoadingNotes ? <NotesSkeleton /> : <IssueNotes notes={notes} />
                    }
                </ScrollView>
            </SafeAreaView>
        </>
    );
...
