appId: com.thomas.pedot.expogitlabclient
---
- takeScreenshot: ./assets/maestro/Home
- tapOn: "Merge Requests"
- assertVisible: "Merge Requests"
- takeScreenshot: ./assets/maestro/Merge Requests
- scrollUntilVisible:
    element:
      text: "Odio aut et rerum."
    direction: DOWN # DOWN|UP|LEFT|RIGHT (optional, default: DOWN)
    timeout: 50000 # (optional, default: 20000) ms
    speed: 80 # 0-100 (optional, default: 40) Scroll speed. Higher values scroll faster.
    visibilityPercentage: 100 # 0-100 (optional, default: 100) Percentage of element visible in viewport
    centerElement: false # true|false (optional, default: false)
- assertVisible: "Odio aut et rerum."
- tapOn: "Odio aut et rerum."
- assertVisible: "Changes"
- takeScreenshot: ./assets/maestro/Merge Request Details
- copyTextFrom:
    id: "mr-title"
    index: 0

- scrollUntilVisible:
    element:
      text: "Events"
    direction: DOWN # DOWN|UP|LEFT|RIGHT (optional, default: DOWN)
    timeout: 50000 # (optional, default: 20000) ms
    speed: 80 # 0-100 (optional, default: 40) Scroll speed. Higher values scroll faster.
    visibilityPercentage: 100 # 0-100 (optional, default: 100) Percentage of element visible in viewport
    centerElement: false # true|false (optional, default: false)
- takeScreenshot: ./assets/maestro/Merge Request Details Commits

- scrollUntilVisible:
    element:
      text: "Events"
    direction: DOWN # DOWN|UP|LEFT|RIGHT (optional, default: DOWN)
    timeout: 50000 # (optional, default: 20000) ms
    speed: 80 # 0-100 (optional, default: 40) Scroll speed. Higher values scroll faster.
    visibilityPercentage: 100 # 0-100 (optional, default: 100) Percentage of element visible in viewport
    centerElement: false # true|false (optional, default: false)
- takeScreenshot: ./assets/maestro/Merge Request Details Events

# Test share button
- tapOn:
    id: "mr-options-menu"
- takeScreenshot: ./assets/maestro/Merge Request Dropdown Option
- assertVisible: "Edit Merge Request"
- assertVisible: "Close Merge Request"
- assertVisible: "Delete Merge Request"
- tapOn:
    id: "mr-edit-option"

- assertVisible: ${maestro.copiedText}
# # Additional tests for the edit screen
# Skip checking specific MR number since it's dynamic
- assertVisible:
    id: "mr-input-title"
- assertVisible:
    id: "mr-description-input"
- tapOn:
    id: "mr-input-title"
- inputText: "Updated Merge Request Title"
- tapOn:
    id: "mr-description-input"
- inputText: "This is an updated description for the merge request."
- tapOn: Save changes

# - assertVisible: "Edit Merge Request #27" # Assuming this is the title of the edit page
- back
# # Test copy URL option
# - tapOn:
#     id: "mr-options-menu"
# - tapOn:
#     id: "mr-copy-url-option"
# # - assertVisible: "URL copied to clipboard" # Assuming you show a toast or alert when URL is copied
# # - back

# Test close/reopen option (this will depend on the current state of the MR)
- tapOn:
    id: "mr-options-menu"
- assertVisible: "Close Merge Request" # Assuming you show a confirmation message
- tapOn:
    id: "toggle-mr-state-option"
- assertVisible: "Closed" # Assuming you show a confirmation message
# If the MR is now closed, test reopening
- tapOn:
    id: "mr-options-menu"
- assertVisible: "Reopen Merge Request" # Assuming you show a confirmation message
- tapOn:
    id: "toggle-mr-state-option"
- assertVisible: "Open" # Assuming you show a confirmation message
- back
- back
